[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous"]
description = "Asynchronous unix domain socket running on the futures-glib main loop"
license = "MIT"
name = "fg-uds"
repository = "https://github.com/antoyo/fg-uds-rs"
version = "0.1.0"

[dependencies]
bytes = "^0.4.3"
futures = "^0.1.13"
futures-glib = "^0.1.0"
gio-sys = "^0.3.4"
glib-sys = "^0.3.4"
libc = "^0.2.22"
tokio-io = "^0.1.1"
