[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous"]
description = "Asynchronous unix domain socket running on the futures-glib main loop"
license = "MIT"
name = "fg-uds"
repository = "https://github.com/antoyo/fg-uds-rs"
version = "0.1.2"

[dependencies]
bytes = "^0.4.3"
futures = "^0.1.13"
futures-glib = "^0.2.0"
gio-sys = "^0.4.0"
glib-sys = "^0.4.0"
libc = "^0.2.22"
nix = "^0.9.0"
tokio-io = "^0.1.1"
